# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_test
cc_test(
    name = "gmock_test1",
    srcs = [
        "gmock_test1.cpp",
    ],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "gmock_test2",
    srcs = [
        "gmock_test2.cpp",
    ],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "gmock_test3",
    srcs = [
        "gmock_test3.h",
        "gmock_test3.cpp",
    ],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)